prevent overlap for Pablo & David

--- a/sass/sudweb.scss
+++ b/sass/sudweb.scss
@@ -290,7 +290,7 @@ a:visited {
     background-image:    -moz-linear-gradient(left, transparent 62%, fade-out($body, 0.22) 62%), url($imgUrl);
     background-image:     -ms-linear-gradient(left, transparent 62%, fade-out($body, 0.22) 62%), url($imgUrl);
     background-image:         linear-gradient(to right, transparent 62%, fade-out($body, 0.22) 62%), url($imgUrl);
-    box-shadow: 0 0 0.3em fade-out(#000, 0.2);
+    //box-shadow: 0 0 0.3em fade-out(#000, 0.2);
     background-position: left center;
     background-size: 100% 100%, cover;
     margin-left: 0;
@@ -755,7 +755,7 @@ aside.ateliers:before {
     @include ribbon($inverted, 16px, left);
 
     &.long-name {
-      @include font-size(22);
+      @include font-size(20);
     }
   }
 
